--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.2
 Authlib==0.15.4
 certifi==2025.1.31
 cffi==1.17.1
@@ -5,11 +6,13 @@ charset-normalizer==3.4.1
 click==8.1.8
 cryptography==44.0.2
 Flask==2.2.1
+Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.0.3
 greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
+Mako==1.3.9
 MarkupSafe==3.0.2
 pycparser==2.22
 PyMySQL==1.1.1
