--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,17 @@ Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.0.3
 greenlet==3.1.1
 idna==3.10
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.9
 MarkupSafe==3.0.2
+packaging==24.2
+pluggy==1.5.0
 pycparser==2.22
 PyMySQL==1.1.1
+pytest==8.3.5
+pytest-flask==1.3.0
 requests==2.32.3
 SQLAlchemy==2.0.40
 typing_extensions==4.13.0
